external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_binding_var.exp
error[E02010]: invalid name
  ┌─ tests/move_2024/matching/invalid_binding_var.move:9:26
  │
9 │             Option::Some(Hello) => (),
  │                          ^^^^^ Invalid pattern variable name 'Hello'. Pattern variable names must start with 'a'..'z' (or '_')

